# Sweedle

./: .gitignore  CLAUDE.md  Desktop - Shortcut.lnk  README.md  Start-Sweedle.ps1  TECHNICAL_DOCUMENTATION.md  build-tauri.bat  install-tauri-deps.bat  run.py  setup.bat  start-backend-debug.bat  start-tauri-debug.bat  start-tauri-dev.bat  start.bat
.claude/: settings.local.json
backend/: .env  .env.example  README.md  convert_model.py  pyproject.toml  requirements-minimal.txt  requirements.txt
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/assets/: __init__.py  router.py  schemas.py
backend/src/core/: device.py  queue.py  websocket_manager.py  worker.py
backend/src/export/: __init__.py  draco_compressor.py  engine_exporter.py  lod_generator.py  mesh_optimizer.py  router.py  thumbnail_generator.py  validator.py
backend/src/generation/: __init__.py  image_analyzer.py  models.py  router.py  schemas.py  service.py
backend/src/inference/: __init__.py  config.py  pipeline.py  preprocessor.py  vram_manager.py
backend/src/pipeline/: __init__.py  router.py  schemas.py  service.py
backend/src/rigging/: __init__.py  config.py  router.py  schemas.py  service.py
backend/src/rigging/blender_scripts/: __init__.py
backend/src/rigging/processors/: __init__.py  base.py  blender.py  unirig.py
backend/src/rigging/skeleton/: __init__.py  humanoid.py  quadruped.py  types.py
backend/src/utils/: __init__.py  vram_diagnostic.py
backend/src/websocket/: __init__.py  router.py  schemas.py
backend/src/workflow/: __init__.py  router.py  schemas.py  service.py
docs/: ROADMAP.md  SETUP.md
frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mesh_ops.rs  mod.rs  model_loader.rs
src-tauri/src/utils/: mesh_analyzer.rs  mod.rs
(+101 files in other folders)
