[package]
name = "sweedle"
version = "1.0.0"
description = "Local 3D Asset Generator for Game Development"
authors = ["Sweedle"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "sweedle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# 3D Model Processing
gltf = "1.4"
nalgebra = "0.33"
rayon = "1.10"

# File Operations
memmap2 = "0.9"
walkdir = "2"

# Image Processing
image = "0.25"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
